--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node-browsers-legacy:9
+      - image: circleci/node:9-browsers-legacy
     steps:
       - checkout
       - restore_cache:
